2006-08-02  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c: Fix error message that gets printed when
	  you try to run GDM as non-root user.
	* gui/greeter/greeter_action_language.c,
	  gui/greeter/greeter_canvas_item.c,
	  gui/greeter/greeter_session.c,
	  gui/greeter/greeter_system.c: I think this time I finally fixed
	  the focus management in gdmgreeter so that when using the Options
	  button the focus remains in the entry.
	* gui/greeter/greeter_parser.c: Only free the hash table if it
	  is not-NULL.

2006-07-31  Brian Cameron  <brian.cameron@sun.com>

	* NEWS: Updated with 2.14.9 and 2.14.10 info.

2006-07-31  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.8:
        * NEWS: Updated.
        * configure.ac: Update to new release version.

2006-07-31  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmcommon.c: Fix gdm_common_setup_blinking so it doesn't
	  try to call g_signal_add_emission_hook if sid is 0.  This fixes
	  a crash in gdmchooser because we were trying to set the 
	  emission hook for a type that was not used or initialized in the
	  gdmchooser GUI.   This fixes bug #349221.
	* gui/gdmcommon.c: Set hosts_opt to NULL, otherwise processing of
	  hosts from the command line would not get done if the compiler
	  put a non-NULL value into its initial value, as it does on 
	  Solaris.

2006-07-24  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.7:
        * NEWS: Updated.
        * configure.ac: Update to new release version.  Removing
	  docs/sv/Makefile from files to create, since it seems
	  to have build problems.

2006-07-21  Ray Strode  <rstrode@redhat.com>

	* gui/gdmlogin.c, gui/greeter/greeter.c: fix off by one
	  error in previous patch.

2006-07-18  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlogin.c, gui/greeter/greeter.c: This patch attempts
	  to fix the problem by turning on io channel's internal
	  buffering feature, searching for the start of the next